# kBLAS

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench.c  daxpy_bench.c  ddot_bench.c  dgemv_bench.c  dscal_bench.c  helper.c  helper.h  saxpy_bench.c  sdot_bench.c  sgemv_bench.c  sscal_bench.c
benchmarks/generator/: CMakeLists.txt  gen.cpp
benchmarks/kblas/: CMakeLists.txt  bench.c
benchmarks/kblas/generator/: config.h  scal_gen.cpp
benchmarks/lib/: benchmark.c  benchmark.h
benchmarks/mGBPS/: CMakeLists.txt  Makefile  mgbps.c
benchmarks/stream/: CMakeLists.txt  Makefile  stream.c
include/: kblas.h  kblas_config.h
lib/: CMakeLists.txt  benchmark.c  benchmark.h
random_scripts/: helper.py  script.py
results/: daxpy.txt  ddot.txt  saxpy.txt  sdot.txt
results/BLAS/: dscal.txt  sscal.txt
results/mGBPS/: all_cc.txt
results/stream/: gcc_auto.txt  gcc_dtuned.txt  icc_auto.txt  icc_dtuned.txt
roofline-analysis/: CMakeLists.txt
roofline-analysis/mFlops/: max_flops  max_flops.c
roofline-analysis/mGBPS/: CMakeLists.txt  LICENSE.txt  mgbps.c
roofline-analysis/stream/: CMakeLists.txt  stream.c
src/: CMakeLists.txt  kblas_daxpy.c  kblas_ddot.c  kblas_dgemv.c  kblas_dscal.c  kblas_saxpy.c  kblas_sdot.c  kblas_sgemv.c  kblas_sscal.c
